--- a/src/main.cpp.2
+++ b/src/main.cpp.2
@@ -23,7 +23,7 @@ void loop()
   {
 
     Wire.beginTransmission(address);
-    error = Wire.endTransmission();
+    error = Wire.endTransmission(false);
 
     if (error == 0)
     {
@@ -37,7 +37,7 @@ void loop()
     }
     else if (error==4)
     {
-      Serial.print("Unknow error at address 0x");
+      Serial.print("Unknown error at address 0x");
       if (address<16)
         Serial.print("0");
       Serial.println(address,HEX);
